# MADASSandD

./: .env  .gitignore  README.md  build.sh  pyproject.toml  requirements.txt  vercel.json
app/: urls.py  views.py
app/locale/fa/LC_MESSAGES/: django.mo  django.po
app/locale/fr/LC_MESSAGES/: django.mo  django.po
app/static/css/: style.css
app/templates/app/: about.html  index.html  index1.html  projects.html  skills.html
config/: settings.py  urls.py
locale/fa/LC_MESSAGES/: django.mo  django.po
locale/fr/LC_MESSAGES/: django.po
static/css/: style.css
templates/: base.html  header.html  index.html  language_selector.html
