[tool.poetry]
name = "madassandd"
version = "0.1.0"
description = ""
authors = ["ahMAD ASSadi <ds1380ahmad@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.6"
requests = "^2.32.3"
django-environ = "^0.12.0"
environ = "^1.0"
pymemcache = "^4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
