[project]
name = "madassandd"
version = "0.1.0"
description = "My Personal Portfolio"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.1",
    "django-environ>=0.12.0",
    "environ>=1.0",
    "requests>=2.32.3",
    "ruff>=0.11.10",
    "whitenoise>=6.9.0",
]

[tool.ruff]
line-length = 88
exclude = ["**/locale/", ".gitignore", "README.md"]

[tool.ruff.format]
quote-style = "double"
